change string to array in subjectSurvey and studyFormatSurvey
