# swagger.json
@@ -38,16 +38,26 @@
               "type": "object",
               "properties": {
                 "subjectSurvey": {
-                  "type": "string",
-                  "example": "Lengua"
+                  "type": "array",
+                  "example": [
+                    "Lengua"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
                 },
                 "ageRangeSurvey": {
                   "type": "string",
                   "example": "7 - 8 años"
                 },
                 "studyFormatSurvey": {
-                  "type": "string",
-                  "example": "Jugando"
+                  "type": "array",
+                  "example": [
+                    "Jugando"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
                 },
                 "email": {
                   "type": "string",
@@ -283,11 +293,6 @@
         "description": "",
         "parameters": [
           {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "required": true,
@@ -310,17 +315,11 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not Found"
           },
           "409": {
             "description": "Conflict"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
